# Nested_Learning_deeplearning

./: .gitignore  README.md  VERSION_PYTHON.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_api.py  run_mlflow.py  setup_proyecto.ps1
docker/: Dockerfile  docker-compose.yml
docs/: SOLUCION_IMPORT_ERROR.md  SOLUCION_MLFLOW_ERROR.md  SOLUCION_PYDANTIC_ERROR.md  SOLUCION_WARNINGS_MLFLOW.md
models/: .gitkeep
notebooks/: 01_EDA_Churn.ipynb  02_Nested_Learning_Training.ipynb  __init__.py
src/: __init__.py
src/application/: __init__.py
src/application/dto/: prediction_request.py
src/application/use_cases/: train_model_use_case.py
src/config/: runtime.py  settings.py  suppress_warnings.py
src/domain/: __init__.py
src/domain/entities/: churn_entity.py
src/domain/models/: deep_learning_model.py
src/domain/services/: preprocessing_service.py
src/infrastructure/: __init__.py
src/infrastructure/api/: main.py
src/infrastructure/mlflow/: mlflow_tracking.py
src/infrastructure/persistence/: model_repository.py
src/infrastructure/web/frontend/: app.js  index.html  styles.css
