[project]
name = "churn-prediction-nested-learning"
version = "1.0.0"
description = "Sistema de predicción de churn usando Deep Learning con Nested Cross Validation"
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

